2008-01-08  kokosabu  <kokosabu@gmail.com>

        * Added: lookahead-u8(file, bytearray, custom).

2009-01-08  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Set library-path to absolute.

        * library.scm (expand-path): Added expand-path.

        * ProcessProcedures.cpp (setCurrentDirectoryDEx): Added set-current-directory!.

        * lib/mosh/shell.scm: Added spawn and spawn->string.

2009-01-07  higepon  <higepon@users.sourceforge.jp>

        * library.scm (%spawn): Added %spawn.

        * PortProcedures.cpp : Added input-port? and binary-port?.

        * FileBinaryOutputPort.cpp (FileBinaryOutputPort): Not to use FILE*, use fileno instead.

        * ProcessProcedures.cpp (internalPipeEx): Added %pipe procedure.

        * VM.cpp (values2): Added for shortcut.

        * %exec takes more arguments.

        * BinaryInputPort.h : Added fileno() function.

        * BinaryOutputPort.h : Added fileno() function.

        * FileBinaryInputPort.cpp (FileBinaryInputPort): fileno_ -> filno()

2009-01-06  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass2/const-inliner): Fixed invalid const-inliner.(thanks mrc.mgg)

2009-01-06  kokosabu  <kokosabu@gmail.com>

        * FileBinaryInputPort: stream to file descriptor.

2009-01-06  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/pp.scm (mosh): Added (mosh pp) library.

        * Added %exec. Not *Tested* yet.

        * ProcessProcedures.cpp (internalForkEx): Added %fork procedure.
                             (internalWaitpidEx): Added %waitpid procedure.

        * ProcessProcedures.cpp.h: Added.

2009-01-05  kokosabu  <kokosabu@gmail.com>

        * Fixed: fxdiv, fxmod, fxdiv0, fxmod0.

        * Makefile.am: '/usr/local/bin/re2c' to 're2c'.

2009-01-05  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/shell.scm (shell-utilities): Added (experimental).
