@@ -86,6 +86,12 @@ Object scheme::internalForkEx(VM* theVM, int argc, const Object* argv)
         callAssertionViolationAfter(theVM, procedureName, "can't fork", L1(strerror(errno)));
         return Object::Undef;
     }
+
+    // for Shell mode.
+    // VM(=parent) ignores SIGINT, but child use default handler
+    if (pid == 0) {
+        signal(SIGINT, SIG_DFL);
+    }
     return Bignum::makeIntegerFromU64(pid);
 }
 
